# taganrog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  tauri.conf.json
icons/: icon.icns
src/: client.rs  config.rs  db.rs  entities.rs  error.rs  lib.rs  main.rs  media.rs  storage.rs  tags.rs
src/api/: client.rs  controllers.rs  error.rs  mod.rs
src/api/controllers/: media.rs  mod.rs  tag.rs  tags.rs
src/cli/: mod.rs
src/db/: entities.rs  hash.rs  id.rs  mod.rs  surreal_http.rs  tag.rs
src/db/entities/: media.rs  tag.rs
src/db/executors/: mod.rs  surreal.rs
src/entities/: media.rs  media_tag.rs  mod.rs  tag.rs
src/http/: auth.rs  error.rs  media.rs  mod.rs  ping.rs  tags.rs
src/http/controllers/: media.rs  ping.rs  tags.rs
src/utils/: hash_utils.rs  mod.rs  str_utils.rs  vec_utils.rs
src/web_ui/: api_client.rs  commands.rs  error.rs  mod.rs  streaming.rs
src/web_ui/assets/scripts/: algolia_1.15.1.min.js  awesome_cloud_0.2.min.js  tailwind_1.0.8.min.js  tailwind_ext_1.0.8.min.js
src/web_ui/assets/styles/: algolia_classic_1.15.1.min.css
src/web_ui/templates/: index.html  media.html  search.html  search_more.html  tag_autocomplete.html  tag_search.html
taganrog-cli/: Cargo.toml
taganrog-d/: Cargo.toml  Dockerfile
taganrog-d/src/: config.rs  lib.rs  main.rs
taganrog-d/src/db/: entities.rs  id.rs  mod.rs  surreal_http.rs
taganrog-d/src/db/entities/: mod.rs
taganrog-d/src/http/: error.rs  mod.rs
taganrog-d/src/http/controllers/: media.rs  mod.rs  ping.rs  tags.rs
taganrog-web-ui/: Cargo.toml
taganrog-web-ui/src/: api_client.rs  main.rs
taganrog-web-ui/templates/: base.html  hello.html  index.html  search.html
templates/: add_media.html  add_tag_to_media.html  algolia_autocomplete.html  base.html  default_header.html  index.html  media.html  new_media.html  search.html  search_autocomplete.html  search_header.html  search_more.html  tags.html  tags_cloud.html  upload.html
