[package]
name = "taganrog"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Ivan Yaremenchuk <trooper982@gmail.com>"
]

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
askama = "0.12.1"
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart", "tower-log", "macros"] }
axum-macros = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
dashmap = "5.5.3"
fastmurmur3 = "0.2"
infer = { version = "0.15", default-features = false }
itertools = "0.12"
path-absolutize = "3.1"
rand = "0.8"
relative-path = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full", "fs"] }
tokio-util = "0.7.10"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = "1.6.3"
uuid = { version = "1.7", features = ["serde", "v4", "fast-rng"] }
