[package]
name = "taganrog"
description = "A personal tagging system and a search engine for your media library."
version = "0.2.0"
edition = "2021"
authors = ["Ivan Yaremenchuk <trooper982@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["taganrog", "tag", "tagging", "search", "media"]
categories = ["multimedia", "command-line-utilities", "web-programming", "gui"]
repository = "https://github.com/darkcodi/taganrog"

[lib]
name = "taganrog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
askama = "0.12"
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart", "tower-log", "macros"] }
axum-macros = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
dashmap = "6.1"
fastmurmur3 = "0.2"
fern = "0.6"
home = "0.5"
humantime = "2.1"
infer = { version = "0.16", default-features = false }
itertools = "0.13"
log = "0.4"
path-absolutize = "3.1"
rand = "0.8"
random-port = "0.1"
relative-path = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-localhost = "2.0"
tauri-plugin-log = "2.0"
tempfile = "3.13"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full", "fs"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
twox-hash = "1.6"
uuid = { version = "1.7", features = ["serde", "v4", "fast-rng"] }
