[package]
name = "taganrog-web-ui"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Ivan Yaremenchuk <trooper982@gmail.com>"
]

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
axum = { version = "0.7", features = ["multipart", "tower-log", "macros"] }
axum-macros = "0.4"
axum-template = { version = "2.1", features = ["minijinja"] }
minijinja = "1.0"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
